syntax = "proto3";
option java_package = "com.game.protocol";
option java_outer_classname = "PlayerProtocol";
import "Item.proto";
import "Skill.proto";
import "Common.proto";

// 简单角色信息
message SimplePlayerInfo {
    int32 id = 1;
    string name = 2;
    int32 level = 3;
    int32 career = 4;
}

message PlayerMessage {
    int32 id = 1;
    string name = 2;
    int32 level = 3;
    int32 career = 4;
    Property property = 5;
}

// 角色列表
message PlayerList {
    repeated SimplePlayerInfo playerInfo = 1;
}

// 登录角色
message LoginRole {
    int32 id = 1;
}


message PlayerInfo {
    int32 id = 1;
    string name = 2;
    int32 level = 3;
    int32 career = 4;
    int32 state = 5;
    Property property = 6;
    EquipBar equipBar = 7;
}

// 属性
message PlayerObject {
    int32 id = 1;
    string name = 2;
    int32 level = 3;
    int32 career = 4;
    int32 sceneId = 5;
    int32 state = 6;
    Property property = 7;
    Bag bag = 8;
    EquipBar equipBar = 9;
    SkillBar skillBar = 10;
}
// 因为装备变更引起的属性变化 同步
message SyncProperty {
    // 什么原因导致的属性变更
    int32 cause = 1;
    Property property = 2;
}

message TalkNpc {
    int32 npcId = 1;
}

message Talk {
    int32 npcId = 1;
    string name = 2;
    string msg = 3;
}